commit before pull from master

--- a/docs/report/azarias.tex
+++ b/docs/report/azarias.tex
@@ -61,7 +61,7 @@ The differents rules for each types of practice are
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.7\textwidth]{images/page-game.png}
+	\includegraphics[width=0.7\textwidth]{images/page-games.png}
 	 \caption{Game page}
 	 \label{page-game}
 \end{figure}
