--- a/docs/report/main.tex
+++ b/docs/report/main.tex
@@ -17,6 +17,7 @@
 \usepackage{chngcntr,csquotes,helvet,lastpage}
 \usepackage{subcaption,wrapfig,fancyhdr,blindtext}
 \usepackage{titletoc,transparent}
+\usepackage{pdfpages}
 %Nouvelles commandes
 \renewcommand{\familydefault}{\sfdefault} %default font
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
