--- a/docs/report/pierre.tex
+++ b/docs/report/pierre.tex
@@ -251,13 +251,13 @@ The game part ("Game" part in the GUI) provides an interactive keyboard where us
 
 \section{Systems and subsystems}
 The application contain one main system which is the software itself. As C++ is a language which need to be compile, the compilation provide a executable which is the only thing users need to run the software.
-We do not need database to store any data, everything is stored in different files using datastream.  
+We do not need database to store any data, everything is stored in different files using DataStream.  
 
 \section{Data requirements}
-As said before, data are stored in different files using datastream. \textit{ ??? }
+As said before, data are stored in different files using DataStream or a Qt class called QSettings. DataStrems is well support by Qt and is used to store informations in files. It is possible then to also read those files. QSettings is a class provide in the Qt library and can be used to store informations directly on the user desktop.
 
 \subsection{Entity relationship diagrams}
-\emph{ ???? }
+
 %------------------------------------
 % Fin Partie Pierre
 %------------------------------------
