--- a/docs/report/pierre.tex
+++ b/docs/report/pierre.tex
@@ -158,16 +158,16 @@ Here you can find some example of typing test on the internet:
 It also possible to find typing lessons on the internet.\\
 To conclude about this part we can say that way to type and typing speed are things very democratize on the internet especially with a lots of website who can explain you best way to type, position of hands, give you advice and way to improve your typing style with speed test. That is showing that the development of a typing test is something useful.
 Every book and website available regarding improving the typing speed are first mentions the finger positions.\\
-As the book written by \citet{beginners}, the fingers must be positioned on the \textit{baseline}. The baseline, is the line on the keyboard containing the letters \textit{F} and \textit{J}. As with 'touch typing in ten lessons' \cite{tenlessons} book explains, every fingers should have an assigned letter. The figure below \ref{fing_pos} shows where the finger position is assigned on a QWERTY keyboard.
+As the book written by \cite{beginners}, the fingers must be positioned on the \textit{baseline}. The baseline, is the line on the keyboard containing the letters \textit{F} and \textit{J}. As with 'touch typing in ten lessons' \cite{tenlessons} book explains, every fingers should have an assigned letter. The figure below \ref{fing_pos} shows where the finger position is assigned on a QWERTY keyboard.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.7\textwidth]{images/fing_pos.png}
 	\caption{Position of the fingers on a QWERTY keyboard}\label{fing_pos}
 \end{figure}
 However, the layout of the keyboard may vary but the finger position will stay on the same baseline. www.computerhope.com \cite{computerhope} shows the different keys for each finger depending on the keyboard layout.
-Other keyboards exist such as those represented in 'typing for beginners' \citep{beginners}. Unfortunately there are not common enough and are only used by more professional typists. So this literature review will not cover the use of them.\\
+Other keyboards exist such as those represented in 'typing for beginners' \cite{beginners}. Unfortunately there are not common enough and are only used by more professional typists. So this literature review will not cover the use of them.\\
 The user must know which finger is assigned to its specific letter on the keyboard. And so forth for each row. The book written by
-\citet{beginners} explains the differents steps on how to follow the assignment for each row. Once again, the letters may vary depending on the keyboard layout, but the finger movements are still the same.
+\cite{beginners} explains the differents steps on how to follow the assignment for each row. Once again, the letters may vary depending on the keyboard layout, but the finger movements are still the same.
 \begin{figure}[H]
     \centering
     \begin{subfigure}[b]{0.3\textwidth}
@@ -188,9 +188,9 @@ The user must know which finger is assigned to its specific letter on the keyboa
 
 \section{Practice}
 The more you know, the more you type. Once you are able to type a full word one needs to keep practising. This builds up a muscle memory of all the possible key stokes which make up the words of the dictionary.
-The computerhope.com\citep{computerhope} website provide good everyday practice example to follow. There is also a large collection of games on the internet to practice and therefore improve the typing speed.\\
+The computerhope.com\cite{computerhope} website provide good everyday practice example to follow. There is also a large collection of games on the internet to practice and therefore improve the typing speed.\\
 how-to-type.com \cite{howto} offers practice sessions such as 10 minutes to an hour per session as their recommendation.
-The book written by \citet{handBook} also gives some advice regarding the finger position and the stretch to do beforehand.
+The book written by \cite{handBook} also gives some advice regarding the finger position and the stretch to do beforehand.
 There is no software which combines both, doing a check that the user has done finger stretches, and provide advice on how to position yourself in front of the keyboard improving your ability to type correctly. Each of these is done on an individual basis.
 
 \section{Speed and accuracy}
@@ -225,8 +225,8 @@ For the general public, it they have a computer and a keyboard, they can learn h
 
 %Bibliography
 \begin{flushleft}
-	\bibliographystyle{unsrtnat}
-	\bibliography{lit_review.bib}
+	\bibliographystyle{plain}
+	\bibliography{lit_review}
 \end{flushleft}
 
 \part{System analysis}
