--- a/docs/report/pierre.tex
+++ b/docs/report/pierre.tex
@@ -257,6 +257,56 @@ We do not need database to store any data, everything is stored in different fil
 As said before, data are stored in different files using DataStream or a Qt class called QSettings. DataStrems is well support by Qt and is used to store informations in files. It is possible then to also read those files. QSettings is a class provide in the Qt library and can be used to store informations directly on the user desktop.
 
 \subsection{Entity relationship diagrams}
+\begin{figure}[h]
+	\centering
+	\begin{minipage}[b]{0.25\textwidth}
+      \includegraphics[height=1\textwidth]{images/Rhomepage.png}
+      \caption{Relationship diagram for Home page}   
+	\end{minipage}
+	\begin{minipage}[b]{0.45\textwidth}
+      \centering \includegraphics[height=1\textwidth]{images/Shomepage.png}
+      \caption{Sequence diagram for Home page}
+	\end{minipage}
+\end{figure}
+
+\begin{figure}[h]
+\begin{center}
+\begin{minipage}{0.2\linewidth}
+      \centering \includegraphics[height=1\textwidth]{images/Rlearnpage.png}
+      \caption{\it Relationship diagram for Learn page}   
+\end{minipage}
+\begin{minipage}{0.2\linewidth}
+      \centering \includegraphics[height=1\textwidth]{images/Slearnpage.png}
+      \caption{\it Sequence diagram for Learn page}
+\end{minipage}
+\end{center}
+\end{figure}
+
+\begin{figure}[h]
+\begin{center}
+\begin{minipage}{0.2\linewidth}
+      \centering \includegraphics[height=1\textwidth]{images/Rpracticepage.png}
+      \caption{\it Relationship diagram for Practice page}   
+\end{minipage}
+\begin{minipage}{0.2\linewidth}
+      \centering \includegraphics[height=1\textwidth]{images/Spracticepage.png}
+      \caption{\it Sequence diagram for Practice page}
+\end{minipage}
+\end{center}
+\end{figure}
+
+\begin{figure}[h]
+\begin{center}
+\begin{minipage}{0.2\linewidth}
+      \centering \includegraphics[height=1\textwidth]{images/Rgamepage.png}
+      \caption{\it Relationship diagram for Game page}   
+\end{minipage}
+\begin{minipage}{0.2\linewidth}
+      \centering \includegraphics[height=1\textwidth]{images/Sgamepage.png}
+      \caption{\it Sequence diagram for Game page}
+\end{minipage}
+\end{center}
+\end{figure}
 
 %------------------------------------
 % Fin Partie Pierre
