--- a/docs/report/pierre.tex
+++ b/docs/report/pierre.tex
@@ -256,56 +256,69 @@ We do not need database to store any data, everything is stored in different fil
 \section{Data requirements}
 As said before, data are stored in different files using DataStream or a Qt class called QSettings. DataStrems is well support by Qt and is used to store informations in files. It is possible then to also read those files. QSettings is a class provide in the Qt library and can be used to store informations directly on the user desktop.
 
-\subsection{Entity relationship diagrams}
+\subsection{Diagrams}
 \begin{figure}[h]
 	\centering
-	\begin{minipage}[b]{0.25\textwidth}
-      \includegraphics[height=1\textwidth]{images/Rhomepage.png}
+	\begin{minipage}[b]{0.3\textwidth}
+      \includegraphics[width=5.2cm]{diagrams/Rhomepage.png}
       \caption{Relationship diagram for Home page}   
 	\end{minipage}
-	\begin{minipage}[b]{0.45\textwidth}
-      \centering \includegraphics[height=1\textwidth]{images/Shomepage.png}
+	\begin{minipage}[b]{0.3\textwidth}
+      \includegraphics[width=5.2cm]{diagrams/Shomepage.png}
       \caption{Sequence diagram for Home page}
+	\end{minipage}
+	\begin{minipage}[b]{0.3\textwidth}
+      \includegraphics[width=5.2cm]{diagrams/UChomepage.png}
+      \caption{User case diagram for Home page}
+	\end{minipage}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\begin{minipage}[b]{0.3\textwidth}
+		\includegraphics[width=5.2cm]{diagrams/Rlearnpage.png}
+		\caption{Relationship diagram for Learn page}	
+	\end{minipage}
+	\begin{minipage}[b]{0.3\textwidth}
+		\includegraphics[width=5.2cm]{diagrams/Slearnpage.png}
+		\caption{Sequence diagram for Learn page}
+	\end{minipage}
+	\begin{minipage}[b]{0.3\textwidth}
+		\includegraphics[width=5.2cm]{diagrams/UClearnpage.png}
+		\caption{User case diagram for Leran page}
 	\end{minipage}
 \end{figure}
 
 \begin{figure}[h]
-\begin{center}
-\begin{minipage}{0.2\linewidth}
-      \centering \includegraphics[height=1\textwidth]{images/Rlearnpage.png}
-      \caption{\it Relationship diagram for Learn page}   
-\end{minipage}
-\begin{minipage}{0.2\linewidth}
-      \centering \includegraphics[height=1\textwidth]{images/Slearnpage.png}
-      \caption{\it Sequence diagram for Learn page}
-\end{minipage}
-\end{center}
+	\centering 
+	\begin{minipage}[b]{0.3\textwidth}
+      \includegraphics[width=5.2cm]{diagrams/Rpracticepage.png}
+      \caption{Relationship diagram for Practice page}   
+	\end{minipage}
+	\begin{minipage}[b]{0.3\textwidth}
+      \includegraphics[width=5.2cm]{diagrams/Spracticepage.png}
+      \caption{Sequence diagram for Practice page}
+	\end{minipage}
+	\begin{minipage}[b]{0.3\textwidth}
+      \includegraphics[width=5.2cm]{diagrams/UCpracticepage.png}
+      \caption{User case diagram for Practice page}
+	\end{minipage}
 \end{figure}
 
 \begin{figure}[h]
-\begin{center}
-\begin{minipage}{0.2\linewidth}
-      \centering \includegraphics[height=1\textwidth]{images/Rpracticepage.png}
-      \caption{\it Relationship diagram for Practice page}   
-\end{minipage}
-\begin{minipage}{0.2\linewidth}
-      \centering \includegraphics[height=1\textwidth]{images/Spracticepage.png}
-      \caption{\it Sequence diagram for Practice page}
-\end{minipage}
-\end{center}
-\end{figure}
-
-\begin{figure}[h]
-\begin{center}
-\begin{minipage}{0.2\linewidth}
-      \centering \includegraphics[height=1\textwidth]{images/Rgamepage.png}
-      \caption{\it Relationship diagram for Game page}   
-\end{minipage}
-\begin{minipage}{0.2\linewidth}
-      \centering \includegraphics[height=1\textwidth]{images/Sgamepage.png}
-      \caption{\it Sequence diagram for Game page}
-\end{minipage}
-\end{center}
+	\centering
+	\begin{minipage}[b]{0.3\textwidth}
+      \includegraphics[width=5.2cm]{diagrams/Rgamepage.png}
+      \caption{Relationship diagram for Game page}   
+	\end{minipage}
+	\begin{minipage}[b]{0.3\textwidth}
+      \includegraphics[width=5.2cm]{diagrams/Sgamepage.png}
+      \caption{Sequence diagram for Game page}
+	\end{minipage}
+	\begin{minipage}[b]{0.3\textwidth}
+      \includegraphics[width=5.2cm]{diagrams/UCgamepage.png}
+      \caption{User case diagram for Game page}
+	\end{minipage}
 \end{figure}
 
 %------------------------------------
